# Flood-Forecasting

./: .gitignore  .sqlfluff  .sqlfluffignore  Brewfile  CLAUDE.md  Flood_Forecasting.docx  README.md  TODO  justfile  pyproject.toml
.claude/: settings.json
.cursor/: mcp.json
.github/workflows/: pr-validation.yml  sync-dataset.yml
data_exploration/: usgs_site_coverage.ipynb
docs/: Flood_Forecasting.md  architecture.md  mlops-guide.md  pipeline_architecture.html  site_count_investigation.md  wandb-mlops-roadmap.md
elt/: __init__.py
elt/extraction/: README.md  __init__.py  gages.py  nldas.py  nldi_attributes.py  usgs.py  weather.py
elt/transformation/: .user.yml  dbt_project.yml  profiles.yml  pyproject.toml
elt/transformation/seeds/: attributes_gageii_Bas_Classif.csv  attributes_gageii_Bas_Morph.csv  attributes_gageii_BasinID.csv  attributes_gageii_Bound_QA.csv  attributes_gageii_Climate.csv  attributes_gageii_FlowRec.csv  (+20 more)
exploratory/: data_exploration.ipynb
models/: README.md  load_wandb_dataset.ipynb  test_model.py  test_model.yml
orchestration/: __init__.py  configs.py  definitions.py  jobs.py  pyproject.toml  resources.py  utils.py
orchestration/assets/: __init__.py  dbt.py  dbt_assets.py  extraction.py  usgs_daily.py  usgs_site_metadata.py  usgs_sites.py  usgs_streamflow.py  wandb_dataset.py  weather.py  weather_forcing.py
orchestration/configs/: __init__.py  ci_smoke_test.yaml  extraction.py
orchestration/resources/: __init__.py  duckdb.py  wandb.py
orchestration/utils/: __init__.py  paths.py  timeseries.py
scripts/: upload_dataset.py
(+24 files in other folders)
