[project]
name = "flood-forecasting"
version = "0.1.0"
description = ""
requires-python = ">=3.11,<3.14"
dependencies = [
    "polars>=1.0.0",
    "torch>=2.0.0",
    "scikit-learn>=1.5.0",
    "wandb",
    "dagster",
    "dagster-webserver",
    "dagster-duckdb",
    "dagster-duckdb-polars",
    "dagster-dbt",
    "dbt-core",
    "dbt-duckdb",
    "duckdb>=1.0.0",
    "httpx>=0.27.0",
    "dataretrieval>=1.0.0",
    "pygeohydro>=0.18.0",
    "h5py>=3.10.0",
    "urllib3>=2.6.3",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["elt", "orchestration"]
