[project]
name = "flood-forecasting-orchestration"
version = "0.1.0"
description = "Dagster pipelines for flood forecasting"
requires-python = ">=3.11"
dependencies = [
    "dagster",
    "dagster-webserver",
    "dagster-duckdb",
    "dagster-duckdb-polars",
    "duckdb>=1.0.0",
    "polars>=1.0.0",
    "httpx>=0.27.0",
    "dataretrieval>=1.0.0",
    "pynldas2>=0.18.0",
    "pygeohydro>=0.18.0",
]
